--- a/plugins/VeinMiner/categories.yml
+++ b/plugins/VeinMiner/categories.yml
@@ -101,12 +101,13 @@ Hoe:
 
 Pickaxe:
   Items:
-  - minecraft:wooden_pickaxe
-  - minecraft:stone_pickaxe
-  - minecraft:golden_pickaxe
-  - minecraft:iron_pickaxe
   - minecraft:diamond_pickaxe
+  - minecraft:golden_pickaxe
+  - minecraft:granite
+  - minecraft:iron_pickaxe
   - minecraft:netherite_pickaxe
+  - minecraft:stone_pickaxe
+  - minecraft:wooden_pickaxe
   BlockList:
   - minecraft:amethyst_cluster
   - minecraft:ancient_debris
