removed essentials spawn

--- a/plugins/LagFixer/config.yml
+++ b/plugins/LagFixer/config.yml
@@ -275,6 +275,9 @@ modules:
           - FIREBALL
           - POTION
           - WITHER_SKULL
+          - FISHING_HOOK
+          - FISHING_ROD
+          - FISHING_BOBBER
   #  - EGG
   #  - SNOWBALL
   #  - ARROW
