--- a/plugins/LagFixer/config.yml
+++ b/plugins/LagFixer/config.yml
@@ -265,6 +265,7 @@ modules:
           - SILVERFISH
           - MAGMA_CUBE
           - DROWNED
+          - ZOMBIE_PIGMAN
       
       # command /lagfixer clear projectiles (like arrow, snowball) SOON
       projectiles:
